--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,8 +15,8 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: white;
+  background: #000000; /* Black background */
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -28,14 +28,9 @@ body {
 
 
 
-.ParagraphWrapper{
-
-
-
-}
-
 .ParagraphWrapper:not(:focus) {
   filter: blur(4px);  /* Apply blur effect when the input is not focused */
+  -webkit-filter: blur(4px);
 }
 
 .ParagraphWrapper:focus{
@@ -58,6 +53,7 @@ body {
   display: 'inline-block';
   background-color: lightgray;
   width: fit-content;
+  width: -webkit-fit-content;
   height: fit-content;
 }
 
