--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -168,7 +168,6 @@ body {
 
 .mode-selector {
   position: relative;
-  font-family: system-ui, -apple-system, sans-serif;
   width: fit-content;
   user-select: none;
   text-align: center;
@@ -226,3 +225,36 @@ body {
   color: #4f9eed;
 }
 /* END dropdown mode selector Styling */
+
+/* START floating start prompt */
+
+.start-prompt {
+
+
+  /* transform: translateX(-50%); */
+  color: white;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+  animation: float 3s ease-in-out infinite;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+    opacity: 0.5;
+  }
+  50% {
+    transform: translateY(-10px);
+    opacity: 1;
+    text-shadow: 0 0 15px rgba(255, 255, 255, 0.4);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 0.5;
+  }
+}
+
+
+/* END floating start prompt */
