--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -437,3 +437,26 @@ body {
 }
 
 /* END Custom Scroll Bar */
+
+/*START PROGRESS TRACKER */
+
+.progress-tracker {
+  position: absolute;
+  top: -50px;
+  right: -16px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  color: black;
+  width: 72px;
+  height: 31px;
+  white-space: nowrap;
+}
+
+#clip-container {
+  position: relative; /* Ensure the progress tracker is positioned relative to this container */
+  
+}
+
+/*END PROGRESS TRACKER */
